--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="profile">
                 <h3>PROFILE</h3>
-                <p>Entry-level front-end developer whose dedication and passion to the work performed allows to achieve on-time good quality results. My previous 5 years experience as an accountant teached me structured way of thinking, ability to meet deadline and satisfy customer's requests.</p>
+                <p>Entry-level front-end developer whose dedication and passion to the work performed allows to achieve on-time good quality results. My previous 5-years experience as an accountant teached me to be a better structure thinker, ability to meet deadlines and satisfy customer's requests.</p>
             </div>
             <div class="projects">
                 <h3>PROJECTS</h3>
@@ -28,21 +28,28 @@
                     <img src="images/tick.png">
                     <a href="https://mpoliarush.github.io/CV/">PORTFOLIO PAGE</a>
                    </div> 
-                   <p>Responsive landing which provides both wide information about me and completed projects.</p>
+                   <p>Responsive landing provides both wide information about me and my completed projects with wide technologies description.</p>
                 </div>
                 <div class="proj-box">
                     <div class="proj-head">
                      <img src="images/tick.png">
                      <a href="https://mpoliarush.github.io/Discover_Ukraine/">DISCOVER UKRAINE</a>
                     </div> 
-                    <p>Completely own developed multipage project, based on self-collected data, dedicated to Ukraine and beauty of every region. </p>
+                    <p>Completely own developed multipage project, based on self-collected data, tells about the most interesting locations of each region in an interactive form. </p>
                  </div>
                  <div class="proj-box">
                     <div class="proj-head">
                      <img src="images/tick.png">
                      <a href="https://mpoliarush.github.io/Blackjack_game/">BLACK JACK GAME</a>
                     </div> 
-                    <p>Own implementation of popular game 'Black Jack'. Responsive game available for both desktop and smartphone.</p>
+                    <p>Own implementation of popular game 'Black Jack'. Responsive application available for both desktop and mobile.</p>
+                 </div>
+                 <div class="proj-box">
+                    <div class="proj-head">
+                     <img src="images/tick.png">
+                     <a href="https://mpoliarush.github.io/Set-a-goal/">SETTING GOALS</a>
+                    </div> 
+                    <p>React application for tracking notes, to-do items etc. All items are available after reloading or changes were made.</p>
                  </div>
                  <div class="proj-box">
                     <div class="proj-head">
@@ -61,9 +68,9 @@
                  <div class="proj-box">
                     <div class="proj-head">
                      <img src="images/tick.png">
-                     <a href="https://mpoliarush.github.io/Set-a-goal/">SETTING GOALS</a>
+                     <a href="https://rolling-scopes-school.github.io/marynapoliarush-JSFEPRESCHOOL2022Q4/momentum/">MOMENTUM</a>
                     </div> 
-                    <p>React application for tracking notes, to-do items etc. All items are available after reloading or changes were made.</p>
+                    <p>Greeting application with weather forecast researcher, audio tracks, random quotes generator and to-do list.</p>
                  </div>
             </div>
         </div>
@@ -72,8 +79,8 @@
             <div class="contacts">
                 <h3>CONTACTS</h3>
                 <ul>
-                    <li><img src="images/phone.png">Kyiv, Ukraine </li>
-                    <li><img src="images/marker.png">+38 096 379 5301 </li>
+                    <li><img src="images/marker.png">Kyiv, Ukraine </li>
+                    <li><img src="images/phone.png">+38 096 379 5301 </li>
                     <li><img src="images/email.png">poliarush.maryna@gmail.com</li>
                     <li><a href="https://github.com/MPoliarush"><img src="images/git.png">MPoliarush</a></li>
                     <li><a href="https://www.linkedin.com/in/maryna-poliarush/"><img src="images/linkedin.png">Maryna_Poliarush</a></li>
@@ -82,15 +89,16 @@
             <div class="education">
                 <h3>EDUCATION</h3>
                 <div class="edu-block">
-                    <p class="year">2016-2018</p>
-                    <span>KYIV-MOHYLA ACADEMY</span>
-                    <p>Master in Finance</p>
-                </div>
-                <div class="edu-block">
                     <p class="year">2022-2023</p>
                     <span>COURSERA, UDEMY, RSSCHOOL</span>
                     <p>Web development</p>
                 </div>
+                <div class="edu-block">
+                    <p class="year">2016-2018</p>
+                    <span>KYIV-MOHYLA ACADEMY</span>
+                    <p>Master in Finance</p>
+                </div>
+                
             </div>
             <div class="skills">
                 <h3>SKILLS</h3>
@@ -110,7 +118,7 @@
                 </ul>
             </div>
             <div class="language">
-                <h3>LANGUAGE</h3>
+                <h3>LANGUAGES</h3>
                 <div class="lang_box">
                     <p>ENGLISH</p>
                     <span><svg style="color: white" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M7.22303 0.665992C7.32551 0.419604 7.67454 0.419604 7.77702 0.665992L9.41343 4.60039C9.45663 4.70426 9.55432 4.77523 9.66645 4.78422L13.914 5.12475C14.18 5.14607 14.2878 5.47802 14.0852 5.65162L10.849 8.42374C10.7636 8.49692 10.7263 8.61176 10.7524 8.72118L11.7411 12.866C11.803 13.1256 11.5206 13.3308 11.2929 13.1917L7.6564 10.9705C7.5604 10.9119 7.43965 10.9119 7.34365 10.9705L3.70718 13.1917C3.47945 13.3308 3.19708 13.1256 3.25899 12.866L4.24769 8.72118C4.2738 8.61176 4.23648 8.49692 4.15105 8.42374L0.914889 5.65162C0.712228 5.47802 0.820086 5.14607 1.08608 5.12475L5.3336 4.78422C5.44573 4.77523 5.54342 4.70426 5.58662 4.60039L7.22303 0.665992Z" fill="yellow"></path> </svg><svg style="color: white" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M7.22303 0.665992C7.32551 0.419604 7.67454 0.419604 7.77702 0.665992L9.41343 4.60039C9.45663 4.70426 9.55432 4.77523 9.66645 4.78422L13.914 5.12475C14.18 5.14607 14.2878 5.47802 14.0852 5.65162L10.849 8.42374C10.7636 8.49692 10.7263 8.61176 10.7524 8.72118L11.7411 12.866C11.803 13.1256 11.5206 13.3308 11.2929 13.1917L7.6564 10.9705C7.5604 10.9119 7.43965 10.9119 7.34365 10.9705L3.70718 13.1917C3.47945 13.3308 3.19708 13.1256 3.25899 12.866L4.24769 8.72118C4.2738 8.61176 4.23648 8.49692 4.15105 8.42374L0.914889 5.65162C0.712228 5.47802 0.820086 5.14607 1.08608 5.12475L5.3336 4.78422C5.44573 4.77523 5.54342 4.70426 5.58662 4.60039L7.22303 0.665992Z" fill="yellow"></path> </svg><svg style="color: white" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M7.22303 0.665992C7.32551 0.419604 7.67454 0.419604 7.77702 0.665992L9.41343 4.60039C9.45663 4.70426 9.55432 4.77523 9.66645 4.78422L13.914 5.12475C14.18 5.14607 14.2878 5.47802 14.0852 5.65162L10.849 8.42374C10.7636 8.49692 10.7263 8.61176 10.7524 8.72118L11.7411 12.866C11.803 13.1256 11.5206 13.3308 11.2929 13.1917L7.6564 10.9705C7.5604 10.9119 7.43965 10.9119 7.34365 10.9705L3.70718 13.1917C3.47945 13.3308 3.19708 13.1256 3.25899 12.866L4.24769 8.72118C4.2738 8.61176 4.23648 8.49692 4.15105 8.42374L0.914889 5.65162C0.712228 5.47802 0.820086 5.14607 1.08608 5.12475L5.3336 4.78422C5.44573 4.77523 5.54342 4.70426 5.58662 4.60039L7.22303 0.665992Z" fill="yellow"></path> </svg><svg style="color: white" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M7.22303 0.665992C7.32551 0.419604 7.67454 0.419604 7.77702 0.665992L9.41343 4.60039C9.45663 4.70426 9.55432 4.77523 9.66645 4.78422L13.914 5.12475C14.18 5.14607 14.2878 5.47802 14.0852 5.65162L10.849 8.42374C10.7636 8.49692 10.7263 8.61176 10.7524 8.72118L11.7411 12.866C11.803 13.1256 11.5206 13.3308 11.2929 13.1917L7.6564 10.9705C7.5604 10.9119 7.43965 10.9119 7.34365 10.9705L3.70718 13.1917C3.47945 13.3308 3.19708 13.1256 3.25899 12.866L4.24769 8.72118C4.2738 8.61176 4.23648 8.49692 4.15105 8.42374L0.914889 5.65162C0.712228 5.47802 0.820086 5.14607 1.08608 5.12475L5.3336 4.78422C5.44573 4.77523 5.54342 4.70426 5.58662 4.60039L7.22303 0.665992Z" fill="yellow"></path> </svg></span>
